Got stuck where apply not working

--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -30,6 +30,7 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 // Make images easier to work with
