--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -49,6 +49,11 @@ button,
 textarea,
 select {
   font: inherit;
+  transition: all 0.2s ease-in-out;
+  &:focus {
+      box-shadow: inset 0 0 7px 0px #60b0cd; /* Change this to your preferred color and width */
+      outline: 2px solid #40c1bf; /* Change this to your preferred color and width */
+  }
 }
 
 // Remove all animations and transitions for people that prefer not to see them
