Many quick changes

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,6 +13,7 @@
 @forward 'utilities/shadows';
 @forward 'utilities/spacing';
 @forward 'utilities/typography';
+@forward 'utilities/tooltips';
 
 // Layouts
 @forward 'layouts/container';
