--- a/src/styles/utilities/_variables.scss
+++ b/src/styles/utilities/_variables.scss
@@ -27,6 +27,7 @@ $colors: (
 
 // Breakpoints
 $breakpoints: (
+  'xs': 480px,
   'sm': 640px,
   'md': 768px,
   'lg': 1024px,
@@ -36,6 +37,7 @@ $breakpoints: (
 
 // Container max-widths
 $container-max-widths: (
+  'xs': 450px,
   'sm': 540px,
   'md': 720px,
   'lg': 960px,
@@ -62,3 +64,7 @@ $column-widths: (
   'md': 300px,
   'lg': 400px
 );
+
+$spacings: (
+  0,1,2,3,4,5,6,7,8,9,10,12,14,15,16,18,20,25,30,35,40,45,50,55,60,65,70,75,80,85,90,95,100
+)
