--- a/src/styles/layouts/_flex.scss
+++ b/src/styles/layouts/_flex.scss
@@ -1,207 +1,138 @@
+@use 'sass:math';
 @use '../utilities/variables' as *;
 
 // Flex Container Mixins
-@mixin flex {
-  display: flex;
-}
-
-@mixin flex-inline {
-  display: inline-flex;
-}
+@mixin flex {display: flex;}
+@mixin flex-inline {display: inline-flex;}
 
 // Direction Mixins
-@mixin flex-row {
-  flex-direction: row;
-}
-
-@mixin flex-row-reverse {
-  flex-direction: row-reverse;
-}
-
-@mixin flex-col {
-  flex-direction: column;
-}
-
-@mixin flex-col-reverse {
-  flex-direction: column-reverse;
-}
+@mixin row {flex-direction: row;}
+@mixin row-reverse {flex-direction: row-reverse;}
+@mixin col {flex-direction: column;}
+@mixin col-reverse {flex-direction: column-reverse;}
 
 // Wrap Mixins
-@mixin flex-wrap {
-  flex-wrap: wrap;
-}
-
-@mixin flex-nowrap {
-  flex-wrap: nowrap;
-}
-
-@mixin flex-wrap-reverse {
-  flex-wrap: wrap-reverse;
-}
+@mixin wrap {flex-wrap: wrap;}
+@mixin nowrap {flex-wrap: nowrap;}
+@mixin wrap-reverse {flex-wrap: wrap-reverse;}
 
 // Main Axis Alignment Mixins
-@mixin justify-start {
-  justify-content: flex-start;
-}
-
-@mixin justify-end {
-  justify-content: flex-end;
-}
-
-@mixin justify-center {
-  justify-content: center;
-}
-
-@mixin justify-between {
-  justify-content: space-between;
-}
-
-@mixin justify-around {
-  justify-content: space-around;
-}
-
-@mixin justify-evenly {
-  justify-content: space-evenly;
-}
+@mixin start {justify-content: flex-start;}
+@mixin end {justify-content: flex-end;}
+@mixin center {justify-content: center;}
+@mixin between {justify-content: space-between;}
+@mixin around {justify-content: space-around;}
+@mixin evenly {justify-content: space-evenly;}
 
 // Cross Axis Alignment Mixins
-@mixin align-start {
-  align-items: flex-start;
-}
-
-@mixin align-end {
-  align-items: flex-end;
-}
-
-@mixin align-center {
-  align-items: center;
-}
-
-@mixin align-stretch {
-  align-items: stretch;
-}
-
-@mixin align-baseline {
-  align-items: baseline;
-}
+@mixin align-start {align-items: flex-start;}
+@mixin align-end {align-items: flex-end;}
+@mixin align-center {align-items: center;}
+@mixin align-stretch {align-items: stretch;}
+@mixin align-baseline {align-items: baseline;}
 
 // Self Alignment Mixins
-@mixin self-auto {
-  align-self: auto;
-}
-
-@mixin self-start {
-  align-self: flex-start;
-}
-
-@mixin self-end {
-  align-self: flex-end;
-}
-
-@mixin self-center {
-  align-self: center;
-}
-
-@mixin self-stretch {
-  align-self: stretch;
-}
+@mixin self-auto {align-self: auto;}
+@mixin self-start {align-self: flex-start;}
+@mixin self-end {align-self: flex-end;}
+@mixin self-center {align-self: center;}
+@mixin self-stretch {align-self: stretch;}
 
 // Flex Child Mixins
-@mixin flex-1 {
-  flex: 1 1 0%;
+@mixin w-full {flex: 0 0 100%;}
+@mixin w-auto {flex: 1 1 auto;}
+
+// Base flex container
+.flex {
+  display: flex;
+  
+  // Direction modifiers
+  &.row { flex-direction: row; }
+  &.row-reverse { flex-direction: row-reverse; }
+  &.col { flex-direction: column; }
+  &.col-reverse { flex-direction: column-reverse; }
+  
+  // Wrap modifiers
+  &.wrap { flex-wrap: wrap; }
+  &.nowrap { flex-wrap: nowrap; }
+  &.wrap-reverse { flex-wrap: wrap-reverse; }
+  
+  // Justify modifiers
+  &.start { justify-content: flex-start; }
+  &.end { justify-content: flex-end; }
+  &.center { justify-content: center; }
+  &.between { justify-content: space-between; }
+  &.around { justify-content: space-around; }
+  &.evenly { justify-content: space-evenly; }
+  
+  // Align modifiers
+  &.items-start { align-items: flex-start; }
+  &.items-end { align-items: flex-end; }
+  &.items-center { align-items: center; }
+  &.items-baseline { align-items: baseline; }
+  &.items-stretch { align-items: stretch; }
+  
+  // Gap modifiers
+  @for $i from 0 through 8 {
+    &.gap-#{$i} { gap: #{$i * 0.25}rem; }
+  }
+  
+  // Child flex items (using column count)
+  > .w-auto { flex: 1 1 auto; }
+  > .w-full { flex: 0 0 100%; }
+  
+  @for $i from 1 through $column-count {
+    > .w-#{$i} {
+      flex: 0 0 math.percentage( math.div($i, $column-count));
+    }
+  }
 }
 
-@mixin flex-auto {
-  flex: 1 1 auto;
-}
 
-@mixin flex-initial {
-  flex: 0 1 auto;
-}
-
-@mixin flex-none {
-  flex: none;
-}
-
-// Basis Mixins
-@mixin basis-none {
-  flex-basis: 0;
-}
-
-@mixin basis-auto {
-  flex-basis: auto;
-}
-
-@mixin basis-full {
-  flex-basis: 100%;
-}
-
-@mixin basis-1-2 {
-  flex-basis: 50%;
-}
-
-@mixin basis-1-3 {
-  flex-basis: 33.333333%;
-}
-
-@mixin basis-1-4 {
-  flex-basis: 25%;
-}
-
-// Classes
-.flex { @include flex; }
-.flex-inline { @include flex-inline; }
-
-.flex-row { @include flex-row; }
-.flex-row-reverse { @include flex-row-reverse; }
-.flex-col { @include flex-col; }
-.flex-col-reverse { @include flex-col-reverse; }
-
-.flex-wrap { @include flex-wrap; }
-.flex-nowrap { @include flex-nowrap; }
-.flex-wrap-reverse { @include flex-wrap-reverse; }
-
-.justify-start { @include justify-start; }
-.justify-end { @include justify-end; }
-.justify-center { @include justify-center; }
-.justify-between { @include justify-between; }
-.justify-around { @include justify-around; }
-.justify-evenly { @include justify-evenly; }
-
-.align-start { @include align-start; }
-.align-end { @include align-end; }
-.align-center { @include align-center; }
-.align-stretch { @include align-stretch; }
-.align-baseline { @include align-baseline; }
-
-.self-auto { @include self-auto; }
-.self-start { @include self-start; }
-.self-end { @include self-end; }
-.self-center { @include self-center; }
-.self-stretch { @include self-stretch; }
-
-// Flex values
-.flex-1 { @include flex-1; }
-.flex-auto { @include flex-auto; }
-.flex-initial { @include flex-initial; }
-.flex-none { @include flex-none; }
-
-// Basis Classes
-.basis-none { @include basis-none; }
-.basis-auto { @include basis-auto; }
-.basis-full { @include basis-full; }
-.basis-1-2 { @include basis-1-2; }
-.basis-1-3 { @include basis-1-3; }
-.basis-1-4 { @include basis-1-4; }
-
-// Responsive classes
+// Responsive variants
 @each $breakpoint, $width in $breakpoints {
   @media (min-width: $width) {
-    .#{$breakpoint}\:basis-none { @include basis-none; }
-    .#{$breakpoint}\:basis-auto { @include basis-auto; }
-    .#{$breakpoint}\:basis-full { @include basis-full; }
-    .#{$breakpoint}\:basis-1-2 { @include basis-1-2; }
-    .#{$breakpoint}\:basis-1-3 { @include basis-1-3; }
-    .#{$breakpoint}\:basis-1-4 { @include basis-1-4; }
+    .#{$breakpoint}\: {
+      // Direction
+      &row { flex-direction: row; }
+      &row-reverse { flex-direction: row-reverse; }
+      &col { flex-direction: column; }
+      &col-reverse { flex-direction: column-reverse; }
+      
+      // Wrap
+      &wrap { flex-wrap: wrap; }
+      &nowrap { flex-wrap: nowrap; }
+      &wrap-reverse { flex-wrap: wrap-reverse; }
+      
+      // Justify
+      &start { justify-content: flex-start; }
+      &end { justify-content: flex-end; }
+      &center { justify-content: center; }
+      &between { justify-content: space-between; }
+      &around { justify-content: space-around; }
+      &evenly { justify-content: space-evenly; }
+      
+      // Align
+      &items-start { align-items: flex-start; }
+      &items-end { align-items: flex-end; }
+      &items-center { align-items: center; }
+      &items-baseline { align-items: baseline; }
+      &items-stretch { align-items: stretch; }
+      
+      // Width (using column count)
+      &w-auto { flex: 1 1 auto; }
+      &w-full { flex: 0 0 100%; }
+      
+      @for $i from 1 through $column-count {
+        &w-#{$i} {
+          flex: 0 0 math.percentage(math.div($i, $column-count));
+        }
+      }
+      
+      // Gap
+      @for $i from 0 through 8 {
+        &gap-#{$i} { gap: #{$i * 0.25}rem; }
+      }
+    }
   }
 }
