--- a/src/styles/layouts/_flex.scss
+++ b/src/styles/layouts/_flex.scss
@@ -41,6 +41,8 @@
 // Flex Child Mixins
 @mixin w-full {flex: 0 0 100%;}
 @mixin w-auto {flex: 1 1 auto;}
+@mixin grow { flex: 1 1 0%; }
+@mixin no-grow { flex: none; }
 
 // Base flex container
 .flex {
@@ -78,9 +80,10 @@
   }
   
   // Child flex items (using column count)
-  > .w-auto { flex: 1 1 auto; }
-  > .w-full { flex: 0 0 100%; }
-  
+  > .w-auto { @include w-auto }
+  > .w-full { @include w-full }
+  > .grow { @include grow; }
+  > .no-grow { @include no-grow; }
   @for $i from 1 through $column-count {
     > .w-#{$i} {
       flex: 0 0 math.percentage( math.div($i, $column-count));
@@ -92,45 +95,50 @@
 // Responsive variants
 @each $breakpoint, $width in $breakpoints {
   @media (min-width: $width) {
-    // Direction
-    .flex.row\@#{$breakpoint} { flex-direction: row; }
-    .flex.row-reverse\@#{$breakpoint} { flex-direction: row-reverse; }
-    .flex.col\@#{$breakpoint} { flex-direction: column; }
-    .flex.col-reverse\@#{$breakpoint} { flex-direction: column-reverse; }
-    
-    // Wrap
-    .flex.wrap\@#{$breakpoint} { flex-wrap: wrap; }
-    .flex.nowrap\@#{$breakpoint} { flex-wrap: nowrap; }
-    .flex.wrap-reverse\@#{$breakpoint} { flex-wrap: wrap-reverse; }
-    
-    // Justify
-    .flex.start\@#{$breakpoint} { justify-content: flex-start; }
-    .flex.end\@#{$breakpoint} { justify-content: flex-end; }
-    .flex.center\@#{$breakpoint} { justify-content: center; }
-    .flex.between\@#{$breakpoint} { justify-content: space-between; }
-    .flex.around\@#{$breakpoint} { justify-content: space-around; }
-    .flex.evenly\@#{$breakpoint} { justify-content: space-evenly; }
+    .flex {
+      // Direction
+      &.row\@#{$breakpoint} { flex-direction: row; }
+      &.row-reverse\@#{$breakpoint} { flex-direction: row-reverse; }
+      &.col\@#{$breakpoint} { flex-direction: column; }
+      &.col-reverse\@#{$breakpoint} { flex-direction: column-reverse; }
+      
+      // Wrap
+      &.wrap\@#{$breakpoint} { flex-wrap: wrap; }
+      &.nowrap\@#{$breakpoint} { flex-wrap: nowrap; }
+      &.wrap-reverse\@#{$breakpoint} { flex-wrap: wrap-reverse; }
+      
+      // Justify
+      &.start\@#{$breakpoint} { justify-content: flex-start; }
+      &.end\@#{$breakpoint} { justify-content: flex-end; }
+      &.center\@#{$breakpoint} { justify-content: center; }
+      &.between\@#{$breakpoint} { justify-content: space-between; }
+      &.around\@#{$breakpoint} { justify-content: space-around; }
+      &.evenly\@#{$breakpoint} { justify-content: space-evenly; }
 
-    // Align
-    .flex.items-start\@#{$breakpoint} { align-items: flex-start; }
-    .flex.items-end\@#{$breakpoint} { align-items: flex-end; }
-    .flex.items-center\@#{$breakpoint} { align-items: center; }
-    .flex.items-baseline\@#{$breakpoint} { align-items: baseline; }
-    .flex.items-stretch\@#{$breakpoint} { align-items: stretch; }
-    
-    // Width (using column count)
-    .flex.w-auto\@#{$breakpoint} { flex: 1 1 auto; }
-    .flex.w-full\@#{$breakpoint} { flex: 0 0 100%; }
-    
-    @for $i from 1 through $column-count {
-      .flex.w-#{$i}\@#{$breakpoint} {
-        flex: 0 0 math.percentage(math.div($i, $column-count));
+      // Align
+      &.items-start\@#{$breakpoint} { align-items: flex-start; }
+      &.items-end\@#{$breakpoint} { align-items: flex-end; }
+      &.items-center\@#{$breakpoint} { align-items: center; }
+      &.items-baseline\@#{$breakpoint} { align-items: baseline; }
+      &.items-stretch\@#{$breakpoint} { align-items: stretch; }
+      
+      // Gap
+      @for $i from 0 through 8 {
+        &.gap-#{$i}\@#{$breakpoint} { gap: #{$i * 0.25}rem; }
       }
-    }
-    
-    // Gap
-    @for $i from 0 through 8 {
-      .flex.gap-#{$i}\@#{$breakpoint} { gap: #{$i * 0.25}rem; }
+
+      // Width (using column count)
+      & > .w-auto\@#{$breakpoint} { flex: 1 1 auto; }
+      & > .w-full\@#{$breakpoint} { flex: 0 0 100%; }
+      & > .grow\@#{$breakpoint} { @include grow; }
+      & > .no-grow\@#{$breakpoint} { @include no-grow; }
+      @for $i from 1 through $column-count {
+        & > .w-#{$i}\@#{$breakpoint} {
+          flex: 0 0 math.percentage(math.div($i, $column-count));
+        }
+      }
+      
+     
     }
   }
 }
